# computer-vision

week1/: README.md  compilation_instructions_for_cpp
week1/models/: README
week1/week1/cpp/: CMakeLists.txt  closing.cpp  cropAndResize.cpp  datatypeConversion.cpp  dilate.cpp  erode.cpp  highguiKeyboard.cpp  highguiMouse.cpp  imageDraw.cpp  opening.cpp  readWriteDisplay.cpp  rotate.cpp  thresholding.cpp  trackbar.cpp  videoRead.cpp  warpAffine.cpp
week1/week1/python/: closing.py  cropAndResize.py  datatypeConversion.py  dilate.py  erode.py  getAffine.py  highguiKeyboard.py  highguiMouse.py  imageDraw.py  opening.py  readWriteDisplay.py  rotate.py  thresholding.py  trackbar.py  videoRead.py  videoWrite.py  warpAffine.py
week2/week2/cpp/: CMakeLists.txt  bilateralFilter.cpp  boxFilter.cpp  brightness.cpp  canny.cpp  cartoon.cpp  clarendon.cpp  colorTransfer.cpp  contrastHistEq.cpp  contrastScaling.cpp  convolution.cpp  cooling.cpp  desaturation.cpp  gamma.cpp  gaussian.cpp  hueHistogram.cpp  interactiveBilaterBlur.cpp  kelvin.cpp  laplacian.cpp  medianBlur.cpp  moon.cpp  pencilBlend.cpp  pencilEdge.cpp  sharpen.cpp  sobel.cpp  warming.cpp  xpro.cpp
week2/week2/python/: bilateralFilter.py  boxFilter.py  brightness.py  canny.py  cartoon.py  clarendon.py  colorTransfer.py  contrastHistEq.py  contrastScaling.py  convolution.py  cooling.py  desaturation.py  gamma.py  gaussian.py  hueHistogram.py  interactiveBilateralBlur.py  kelvin.py  laplacian.py  medianBlur.py  moon.py  pencilBlend.py  pencilEdge.py  sharpen.py  sobel.py  warming.py  xpro.py
